// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pnpm icon render custom class 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-pnpm lucide-Pnpm custom-class"
    aria-hidden="true"
  >
    <path
      d="M22 8.24922H15.7507V2H22V8.24922Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M15.1242 8.24922H8.875V2H15.1242V8.24922Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M8.25 8.24898H2V1.99976H8.25V8.24898Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M22 15.1243H15.7507V8.87427H22V15.1243Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M15.1242 15.1243H8.875V8.87427H15.1242V15.1243Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M15.1242 21.9985H8.875V15.7493H15.1242V21.9985Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M22 21.9985H15.7507V15.7493H22V21.9985Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M8.25 21.9985H2V15.7493H8.25V21.9985Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;

exports[`pnpm icon render default 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-pnpm lucide-Pnpm"
    aria-hidden="true"
  >
    <path
      d="M22 8.24922H15.7507V2H22V8.24922Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M15.1242 8.24922H8.875V2H15.1242V8.24922Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M8.25 8.24898H2V1.99976H8.25V8.24898Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M22 15.1243H15.7507V8.87427H22V15.1243Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M15.1242 15.1243H8.875V8.87427H15.1242V15.1243Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M15.1242 21.9985H8.875V15.7493H15.1242V21.9985Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M22 21.9985H15.7507V15.7493H22V21.9985Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
    <path
      d="M8.25 21.9985H2V15.7493H8.25V21.9985Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;
